--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,5 +21,11 @@
 		<input type="text" name="quote" placeholder="Quote">
 		<button type="submit">Submit</button>
 	</form>
+	<br>
+	<div>
+		<h2>Replace last quote written by Master Yoda with a quote by Darth Vader</h2>
+		<button id='update'>Darth inVader!</button>
+	</div>
+	<script src='main.js'></script>
 </body>
 
