--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,10 @@
 		<h2>Replace last quote written by Master Yoda with a quote by Darth Vader</h2>
 		<button id='update'>Darth inVader!</button>
 	</div>
+	<div>
+		<h2>Delete Darth Vader's first quote</h2>
+		<button id='delete'>Delete quote</button>
+	</div>
 	<script src='main.js'></script>
 </body>
 
